# tel-hai-excellenteam-2025-c-chess-ex1-Chess-template

./: .clang-format  .gitignore  Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  Chess.cpp  Chess.h  ChessMultithread.cpp  ChessMultithread.h  ChessRules.cpp  Exceptions.h  Exercise1.sh  Exercise2.sh  Exercise3.sh  Exercise5.sh  King.cpp  King.h  Knight.cpp  Knight.h  Move.h  MyComparator.h  PRACTICES.md  Pawn.cpp  Pawn.h  Piece.h  PriorityQueue.h  Queen.cpp  Queen.h  README (2).md  README.md  README_for_algo_and_exception.md  Rook.cpp  Rook.h  main.cpp  my_file  run.sh
.github/workflows/: c-cpp.yml
Chess/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README (3).md  README.txt  chess  cmake_install.cmake  compile_commands.json
Chess/Chess/include/: Bishop.h  Board.h  Chess.h  King.h  Knight.h  Piece.h  Rook.h
Chess/Chess/src/: Board.cpp  King.cpp  Knight.cpp  Pawn.cpp  Rook.cpp  main.cpp
Chess/include/: Bishop.h  Bishop.hpp  Board.h  Board.hpp  BoardManager.h  CMakeLists.txt  Chess.h  ChessAI.h  Common.h  Constants.h  Exception_chess.h  Exceptions.h  Game.h  GameBoard.h  GameEngine.h  GameManager.h  GameUtils.h  Horse.h  InvalidMoveBaseException.h  InvalidPromotionException.h  InvalidSuicideException.h  King.h  King.hpp  Knight.h  Knight.hpp  Makefile  Model.h  Move.h  MoveComparator.h  MyComparator.h  Pawn.h  Pawn.hpp  Piece.h  Piece.hpp  PieceFactory.h  Pieces.h  Position.h  Position.hpp  PriorityQueue.h  Queen.h  (+10 more)
Chess/include/AI/: BestMoveFinder.h
Chess/include/Piece/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
Chess/include/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
Chess/include/Utils/: CMove.h  Exception.h  MoveScorePair.h  ThreadPool.h  ThreadSafePriorityQueue.h  colors.h
Chess/include/exceptions/: EmptyQueueException.h  InvalidDepthException.h
Chess/src/:  Exception_chess.cpp  Bishop.cpp  Board.cpp  BoardManager.cpp  CMakeCache.txt  CMakeLists.txt  Chess  Chess.cpp  ChessAI.cpp  Common.cpp  Game.cpp  GameBoard.cpp  GameEngine.cpp  GameManager.cpp  GameUtils.cpp  Horse.cpp  King.cpp  Knight.cpp  Makefile  Model.cpp  Move.cpp  MoveComparator.cpp  Pawn.cpp  Piece.cpp  PieceFactory.cpp  Pieces.cpp  Position.cpp  PriorityQueue.cpp  Queen.cpp  Rook.cpp  ThreadPool.cpp  Utility.cpp  bench.cpp  board.cpp  cmake_install.cmake  main  main.cpp  pawn.cpp  piece.cpp
Chess/src/AI/: BestMoveFinder.cpp
Chess/src/Piece/: Bishop.cpp  CMakeLists.txt  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
Chess/src/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
Chess/src/Utils/: ThreadPool.cpp
Chess/test/: GameTests.cpp
Excellenteam Advanced C++/Ex/chess-3-ex-Yazan/: CONTRIBUTING.md  README.md
Excellenteam Advanced C++/Ex/chess-3-ex-Yazan/.github/workflows/: c-cpp.yml
Excellenteam Advanced C++/Ex/chess-3-ex-Yazan/Chess/: CMakeLists.txt
Excellenteam Advanced C++/Ex/chess-3-ex-Yazan/Chess/include/: Chess.h  LegalMove.h  Move.h  MyPriorityQueue.h  RunChess.h  ThreadPool.h
Excellenteam Advanced C++/Ex/chess-3-ex-Yazan/Chess/src/: CMakeLists.txt  Chess.cpp  LegalMove.cpp  Move.cpp  RunChess.cpp  ThreadPool.cpp  main.cpp
include/: Board.h  Common.h  King.h  Knight.h  Rook.h
src/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  Common.cpp  Game.cpp  Game.h  King.cpp  King.h  Knight.cpp  Knight.h  Move.cpp  Pawn.cpp  Pawn.h  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  main.cpp
